<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clipToPadding="false"
        app:cardCornerRadius="20dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="193dp">

            <TextView
                android:id="@+id/card_your_balance"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/your_balance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/card_your_balance"
                app:layout_constraintTop_toBottomOf="@+id/card_your_balance" />

            <TextView
                android:id="@+id/tv_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/card_balance"
                app:layout_constraintStart_toEndOf="@+id/card_balance" />

            <TextView
                android:id="@+id/tv_income_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/income"
                app:layout_constraintStart_toStartOf="@+id/card_balance2"
                app:layout_constraintTop_toBottomOf="@+id/card_balance2" />

            <TextView
                android:id="@+id/tv_outcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/outcome"
                app:layout_constraintStart_toStartOf="@+id/tv_income_text"
                app:layout_constraintTop_toBottomOf="@+id/tv_income_text" />

            <TextView
                android:id="@+id/tv_income_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                app:layout_constraintStart_toEndOf="@+id/tv_income_text"
                app:layout_constraintTop_toTopOf="@+id/tv_income_text" />

            <TextView
                android:id="@+id/tv_outcome_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tv_income_value"
                app:layout_constraintTop_toTopOf="@+id/tv_outcome_text" />

            <ImageView
                android:id="@+id/card_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/settings_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_cardname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@+id/card_your_balance"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_balance2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/card_balance"
                app:layout_constraintTop_toBottomOf="@+id/card_balance" />

            <TextView
                android:id="@+id/tv_currency2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/card_balance2"
                app:layout_constraintStart_toEndOf="@+id/card_balance2" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
